--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,15 @@
 body {
-    background-color: bisque;
+  background-color: bisque;
 }
-h4{
-    display:inline;
+
+h4 {
+  display: inline;
 }
-.refresh{
-    margin-left: 13%;
+
+.refresh {
+  margin-left: 13%;
 }
-.input-group-text{
-    background-color:#D1E7DD;
+
+.input-group-text {
+  background-color: #d1e7dd;
 }
